fixed containers for movie pages so text and poster don't overlap

--- a/src/App.css
+++ b/src/App.css
@@ -65,3 +65,7 @@
 #sorry-msg{
   color: white;
 }
+
+.col-sm-3{
+  max-width: none;
+}
